--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegisterType" android:exported="true" ></activity>
-        <activity android:name=".UpdateMedicine"  android:exported="true"/>
-        <activity android:name=".Notifications"  android:exported="true"/>
-        <activity android:name=".Medication"  android:exported="true"/>
+        <activity android:name=".Register2"></activity>
+        <activity
+            android:name=".RegisterType"
+            android:exported="true" />
+        <activity
+            android:name=".UpdateMedicine"
+            android:exported="true" />
+        <activity
+            android:name=".Notifications"
+            android:exported="true" />
+        <activity
+            android:name=".Medication"
+            android:exported="true" />
         <activity
             android:name=".EtiquetaLida"
             android:exported="true" />
