--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FacebookLogin"></activity>
+        <activity android:name=".Badge"></activity>
+        <activity android:name=".BadgesList" />
+        <activity android:name=".ManageMedication" />
+        <activity android:name=".FacebookLogin" />
         <activity android:name=".Register2" />
         <activity
             android:name=".RegisterType"
