--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-storage:19.1.0'
 
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+ //   implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
 buildscript {
