--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,13 @@
     <uses-permission android:name="android.permission.NFC" />
 
     <uses-feature
-        android:name="android.hardware.nfc"
-        android:required="true" />
+        android:name="android.hardware.nfc"/>
+<!--        android:required="true"-->
+
     <uses-feature
-        android:name="android.hardware.camera"
-        android:required="true" />
+        android:name="android.hardware.camera"/>
+<!--        android:required="true"-->
+
 
     <application
         android:allowBackup="true"
