--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.example.medlis"
@@ -24,6 +25,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
     }
 }
 
@@ -71,10 +73,12 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     implementation 'com.google.firebase:firebase-storage:19.1.0'
-
+    implementation 'org.jsoup:jsoup:1.13.1'
+    implementation 'com.itextpdf:itextg:5.5.10'
  //   implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
+
 buildscript {
     repositories {
         mavenCentral()
