medication changes and general fixes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditProfile"></activity>
+        <activity android:name=".EditMedication"></activity>
+        <activity android:name=".EditProfile" />
         <activity android:name=".ListMedications" />
         <activity
             android:name=".LeafletWebview"
