--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'com.itextpdf:itextg:5.5.10'
+    implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
  //   implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
