--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
 
+
     }
 }
 
@@ -41,6 +42,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-messaging:20.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -49,10 +51,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
     // Firebase Authentication
     implementation 'com.google.firebase:firebase-core:17.4.2'
-    implementation 'com.google.firebase:firebase-auth:19.3.1'
 
-    // Google Sign In SDK (only required for Google Sign In)
-    implementation 'com.google.android.gms:play-services-auth:18.0.0'
 
     // Firebase UI
     // Used in FirebaseUIActivity.
@@ -77,9 +76,17 @@ dependencies {
     implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
  //   implementation 'com.android.support:recyclerview-v7:28.0.0'
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:26.2.0')
 
+
+    // Also declare the dependency for the Google Play services library and specify its version
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.firebase:firebase-client-android:2.5.2+'
+    implementation 'com.firebaseui:firebase-ui:0.4.4'
 
 }
+
 apply plugin: 'com.google.gms.google-services'
 
 buildscript {
