--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,20 +6,19 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CONTROL_KEYGUARD"
+    <uses-permission
+        android:name="android.permission.CONTROL_KEYGUARD"
         tools:ignore="ProtectedPermissions" />
     <uses-permission
         android:name="android.permission.MEDIA_CONTENT_CONTROL"
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.NFC" />
+
     <uses-feature android:name="android.hardware.nfc" /> <!-- android:required="true" -->
     <uses-feature android:name="android.hardware.camera" />
-    <!--OPTIONAL   <meta-data android:name="com.facebook.sdk.AutoLogAppEventsEnabled"
-           android:value="false"/>
-       <meta-data android:name="com.facebook.sdk.AdvertiserIDCollectionEnabled"
-           android:value="false"/>
-       <meta-data android:name="com.facebook.sdk.AutoInitEnabled"
-           android:value="true"/> -->
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:exported="true"
@@ -27,13 +26,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
+        <activity android:name=".RegisterSocialNetworks"></activity>
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            tools:replace="android:value"
-            android:value="@string/facebook_app_id" />
-        <activity android:name=".EditMedication"></activity>
+            android:value="@string/facebook_app_id"
+            tools:replace="android:value" />
+
+        <activity android:name=".EditMedication" />
         <activity android:name=".EditProfile" />
         <activity android:name=".ListMedications" />
         <activity
@@ -122,5 +123,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 </manifest>
